--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
@@ -35,6 +36,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
