--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.5",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "node-appwrite": "^14.2.0",
@@ -35,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
