--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
