--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
@@ -28,7 +29,7 @@
     "framer-motion": "^12.0.5",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.1",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.522.0",
     "next": "^15.1.6",
     "node-appwrite": "^14.2.0",
     "nodemailer": "^6.10.0",
@@ -40,7 +41,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.0",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.1"
