--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.1",
